--- a/EDIT_give-day.html
+++ b/EDIT_give-day.html
@@ -4,6 +4,9 @@
         <!--NAV BAR HERE-->
 
         <!--VIDEO HERE-->
+        <video src="https://drive.google.com/file/d/11UWnBZTHloFEOrOeKj3no5DhjleSpbzH/view?usp=sharing" width="320" height="240" controls>
+            Video not supported
+        </video>
 
         <div id="project-descrip">
             <p>
