--- a/EDIT_give-day.html
+++ b/EDIT_give-day.html
@@ -4,8 +4,8 @@
         <!--NAV BAR HERE-->
 
         <!--VIDEO HERE-->
-        <video src="https://drive.google.com/file/d/11UWnBZTHloFEOrOeKj3no5DhjleSpbzH/view?usp=sharing" width="320" height="240" controls>
-            Video not supported
+        <video>
+            <source src="https://drive.google.com/uc?export=download&id=https://drive.google.com/file/d/11UWnBZTHloFEOrOeKj3no5DhjleSpbzH/view?usp=sharing" type='video/mp4'>
         </video>
 
         <div id="project-descrip">
