--- a/EDIT_give-day.html
+++ b/EDIT_give-day.html
@@ -1,4 +1,11 @@
+<!DOCTYPE html>
+
 <html>
+
+    <head>
+        <title>Editing: Give Day</title>
+    </head>
+
     <body>
         <h1>Jillian Nguyen</h1>
         <!--NAV BAR HERE-->
