--- a/EDIT_give-day.html
+++ b/EDIT_give-day.html
@@ -11,8 +11,7 @@
         <!--NAV BAR HERE-->
 
         <!--VIDEO HERE-->
-        <video src="https://drive.google.com/uc?export=download&id=11UWnBZTHloFEOrOeKj3no5DhjleSpbzH" type='video/mp4'>
-        </video>
+        <video src="https://drive.google.com/uc?export=download&id=11UWnBZTHloFEOrOeKj3no5DhjleSpbzH" width="1920" height="1080" controls>Can't display video.</video>
 
         <div id="project-descrip">
             <p>
