--- a/EDIT_give-day.html
+++ b/EDIT_give-day.html
@@ -3,7 +3,9 @@
 <html>
 
     <head>
-        <title>Editing: Give Day</title>
+        <link href="./style.css" type="text/css" rel="stylesheet">
+
+        <title>Editing: Give Day</title>        
     </head>
 
     <body>
@@ -16,8 +18,8 @@
         <div id="project-descrip">
             <p>
                 <b>UC Davis 2019 Give Day</b> is an advertisement highlighting the different funds available for donors to contribute to during Give Day. At a glance, it featured all various units and awards that serve UC Davis students throughout each school year. 
-             </p>
-             <p>
+            </p>
+            <p>
                  This video had a hard limit of 45 seconds max and needed to feature as many of the funds as possible within that timeframe. My main challenge was meeting this limit, while still <b>conveying the impact</b> that each unit and award makes on students at UC Davis.
             </p>
             <p>
